# Mosar_RE

./: .env.example  .gitignore  ARCHITECTURE.md  BUGFIX_QUERY_PATH_ROUTING.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FINAL_COMPLETION_REPORT.md  GAP_ANALYSIS.md  LANGGRAPH_WORKFLOW.md  PHASE0-2_COMPLETE.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_FULL_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_TESTING_GUIDE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PRD.md  PRD_COMPLIANCE_FINAL.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STREAMLIT_CLOUD_SETUP.md  TEST_REPORT_QUERY_PATH_FIX.md  VECTOR_SEARCH_VERIFICATION.md  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.claude/: settings.local.json
data/entities/: mosar_entities.json
data/templates/: cypher_templates.yaml
scripts/: check_embeddings.py  check_neo4j_status.py  check_phase2_criteria.py  demo_cli.py  load_demo_procedures.py  load_design_docs.py  load_documents.py  load_srd.py  test_cli_live.py  test_environment.py  test_workflow.py
src/graphrag/: app.py  hitl.py  state.py  workflow.py
src/ingestion/: demo_procedure_parser.py  design_doc_parser.py  embedder.py  neo4j_loader.py  srd_parser.py  text_chunker.py
src/neo4j_schema/: create_schema.py  schema.cypher
src/query/: cypher_templates.py  router.py  text2cypher.py
src/utils/: cache.py  entity_resolver.py  neo4j_client.py  schema_inspector.py
tests/: __init__.py  conftest.py  test_cypher_node.py  test_e2e.py  test_ner_node.py  test_synthesize_node.py  test_vector_search_node.py
(+6 files in other folders)
